finished course, beginning customization

--- a/app/views/enrollment_mailer/student_enrollment.html.haml
+++ b/app/views/enrollment_mailer/student_enrollment.html.haml
@@ -27,4 +27,4 @@ After completing the course, you will be entitled to a Certificate of Completion
 %p
 Regards, 
 .row
-= link_to 'The Corsego team', root_url
+= link_to 'The Islam4Kids team', root_url
