--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     %meta{:content => "Yaroslav Shmarov", :name => "author"}/
     = favicon_link_tag 'logo-bootstrap.png'
     %title
-      = content_for?(:title) ? yield(:title) : "Corsego"
+      = content_for?(:title) ? yield(:title) : "Islam4Kids"
     = csrf_meta_tags
     = csp_meta_tag
 
