--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -4,7 +4,7 @@
       %h3
         About Us
     .card-body
-      %a{:href => "https://corsego.com", :target => "_blank"} Corsego e-learning platform
+      %a{:href => "https://Islam4kids.org", :target => "_blank"} Islam4Kids e-learning platform
       is authored by Yaroslav Shmarov.
       %p
       You can learn to build such applications on your own, as well as discover all my reasonings for this architecture in my
@@ -18,7 +18,7 @@
       %h3 New hot project!
 
       💾
-      %a{:href => "https://saas.corsego.com"} CorsegoSaaS
+      %a{:href => "https://saas.Islam4kids.org"} Islam4KidsSaaS
       \- Ruby on Rails row-based multitenancy SaaS template. Check it out!
       %p
       🎥
@@ -27,12 +27,12 @@
 
       %hr
         📕
-        %a{:href => "https://blog.corsego.com"} My Ruby on Rails blog
+        %a{:href => "https://blog.Islam4kids.org"} My Ruby on Rails blog
       %p
         💬 You can follow me on Twitter
         %a{:href => "https://twitter.com/yaro_the_slav"} @yaro_the_slav
 
     .card-footer
       Questions?
-      %a{:href => "mailto:hello@corsego.com?subject=Corsego%20SaaS%20question"} Contact us
+      %a{:href => "mailto:hello@Islam4kids.org?subject=Islam4Kids%20SaaS%20question"} Contact us
 %br
