--- a/app/views/enrollments/certificate.pdf.haml
+++ b/app/views/enrollments/certificate.pdf.haml
@@ -4,9 +4,9 @@
       %br
       %br
       %span{:style => "font-size:50px; font-weight:bold"} Certificate of Completion
-  
+
       /%center
-      /  %h1 
+      /  %h1
       /    Certificate of Completion
 
       %br
@@ -24,29 +24,29 @@
         %u
           = @enrollment.course.title
       %h3
-        on the Corsego.com platform
-      
+        on the Islam4kids.org platform
+
       %p
 
       %br
       %br
       %br
-      %b Certificate id: 
+      %b Certificate id:
       #{@enrollment.slug}
-      
+
       %p
-      
-      %b Certificate url: 
+
+      %b Certificate url:
       #{request.base_url}#{request.original_fullpath}
 
       %p
-      %b Registration date: 
+      %b Registration date:
       #{@enrollment.created_at.strftime('%d-%b-%Y')}
-      
+
       %br
       %br
       %center
         %h3
-          = image_tag wicked_pdf_asset_base64('logo-bootstrap.png'), height: "30", width: "auto"
+          = image_tag wicked_pdf_asset_base64('logo.png'), height: "30", width: "auto"
           %p
-          www.Corsego.com
+          www.islam4kids.org
