--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,8 @@
 %nav.navbar.navbar-expand-lg.navbar-dark.purple-background
   %a.navbar-brand{:href => "/"}
-    = image_tag 'logo-white.png', size: '30x30', alt: "logo", class: "d-inline-block align-top"
+    = image_tag 'logo.png', size: '30x30', alt: "logo", class: "d-inline-block align-top"
     /.fa.fa-graduation-cap
-    Corsego
+    Islam4Kids
   %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
     %span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
@@ -73,7 +73,7 @@
             .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "adminDropdown"}
               = link_to unapproved_courses_path, class: "dropdown-item #{'active' if current_page?(unapproved_courses_path)}" do
                 .fa.fa-graduation-cap
-                Courses: Unapproved 
+                Courses: Unapproved
                 .badge.badge-danger
                   = Course.unapproved.published.count
               = link_to users_path, class: "dropdown-item #{'active' if current_page?(users_path)}" do
