--- a/app/views/layouts/pdf.html.haml
+++ b/app/views/layouts/pdf.html.haml
@@ -6,6 +6,6 @@
     = wicked_pdf_stylesheet_link_tag "pdf"
   %body{:onload => "number_pages"}
     #header
-      /= wicked_pdf_image_tag 'logo-bootstrap.png', height: "30", width: "auto"
+      /= wicked_pdf_image_tag 'logo.png', height: "30", width: "auto"
     #content
       = yield
