--- a/app/views/static_pages/privacy.html.haml
+++ b/app/views/static_pages/privacy.html.haml
@@ -5,9 +5,9 @@
         Privacy Policy
     .card-body
       %p
-        Your privacy is important to us. It is Corsego's policy to respect your privacy regarding any information we may collect from you across our website,
+        Your privacy is important to us. It is Islam4Kids's policy to respect your privacy regarding any information we may collect from you across our website,
         = succeed "," do
-          %a{:href => "http://corsego.com"} corsego.com
+          %a{:href => "http://Islam4kids.org"} Islam4kids.org
       %p We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.
       %p We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.
       %p We don’t share any personally identifying information publicly or with third-parties, except when required to by law.
