--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %meta{:content => "online education, course platform, video tutorials, udemy clone", :name => "keywords"}/
     %meta{:content => "Online Learning and Skill sharing platform", :name => "description"}/
     %meta{:content => "Yaroslav Shmarov", :name => "author"}/
-    = favicon_link_tag 'logo-bootstrap.png'
+    = favicon_link_tag 'logo.png'
     %title
       = content_for?(:title) ? yield(:title) : "Islam4Kids"
     = csrf_meta_tags
