--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -5,9 +5,9 @@
         About Us
     .card-body
       %a{:href => "https://Islam4kids.org", :target => "_blank"} Islam4Kids e-learning platform
-      is authored by Yaroslav Shmarov.
+      is authored by Alisha Taylor.
       %p
-      You can learn to build such applications on your own, as well as discover all my reasonings for this architecture in my
+      You can learn to build such applications on your own in this
       %b Bestseller Udemy Course
       🎥
       %a{:href => "https://www.udemy.com/course/2519558/?referralCode=4721E9D437DEE1734159"} Ruby on Rails 6: Learn 25+ gems and build a Startup MVP 2020
@@ -18,7 +18,6 @@
       %h3 New hot project!
 
       💾
-      %a{:href => "https://saas.Islam4kids.org"} Islam4KidsSaaS
       \- Ruby on Rails row-based multitenancy SaaS template. Check it out!
       %p
       🎥
@@ -27,12 +26,10 @@
 
       %hr
         📕
-        %a{:href => "https://blog.Islam4kids.org"} My Ruby on Rails blog
+        %a{:href => "https://Islam4kids.org/blog"} My blog
       %p
-        💬 You can follow me on Twitter
-        %a{:href => "https://twitter.com/yaro_the_slav"} @yaro_the_slav
 
     .card-footer
       Questions?
-      %a{:href => "mailto:hello@Islam4kids.org?subject=Islam4Kids%20SaaS%20question"} Contact us
+      %a{:href => "mailto:inspirebyexample0@gmail.com?subject=Islam4Kids%20Academy%20question"} Contact us
 %br
