--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -175,18 +175,18 @@
         .fa.fa-clock
         Go at your own pace
       %small
-        Enjoy lifetime access to courses on Udemy’s website and app
+        Enjoy unlimited access to courses as long as you are active
   .card
     .card-body
       %b
         .far.fa-check-circle
-        Learn from industry experts
+        Learn from anywhere
       %small
         Select from top instructors around the world
   .card
     .card-body
       %b
         .far.fa-play-circle
-        Find video courses on almost any topic
+        Find courses on that meet your needs
       %small
-        Build your library for your career and personal growth
+        Choose the course that is right for your current level
