--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -10,7 +10,7 @@
         /= image_tag course.avatar.variant(resize_to_limit: [100, 100])
         /= image_tag course.avatar.variant(resize_to_fill: [320,240]).processed
   .card-footer
-    %small= simple_format(course.marketing_description)
+    %small= simple_format(course.short_description)
   .card-footer
     .text-center
       = enrollment_button(course)
@@ -32,7 +32,7 @@
         = course.lessons_count
       .col-md-6
         .text-right
-          - if course.user 
+          - if course.user
             - if course.user.image?
               = image_tag course.user.image, size: '20x20', alt: "#{course.user.email}", class: 'rounded-circle'
             = link_to course.user.username, user_path(course.user)
