--- a/app/views/courses/course_wizard/landing_page.html.haml
+++ b/app/views/courses/course_wizard/landing_page.html.haml
@@ -11,7 +11,7 @@
     .row
     = f.input :avatar
 
-    = f.input :marketing_description
+    = f.input :short_description, :placeholder => "Short Course Description"
 
     = f.input :description, as: :rich_text_area
 
