--- a/app/views/enrollments/new.html.haml
+++ b/app/views/enrollments/new.html.haml
@@ -1,6 +1,6 @@
 - content_for :title do
-  Islam4Kids 
-  | 
+  Islam4Kids
+  |
   New enrollment
 
 .card.shadow
@@ -8,11 +8,28 @@
     %h3
       .fa.fa-graduation-cap
       = link_to @course.title, course_path(@course)
-      %hr
-      .fa.fa-lock-open
-      Buy course:
-      = number_to_currency @course.price
   .card-body
+    .far.fa-bookmark
+    = pluralize(@course.chapters_count, 'Chapter')
+    .row
+    .fa.fa-tasks
+    = pluralize(@course.lessons_count, 'Lesson')
+    .row
+    .far.fa-clock
+    Created
+    = @course.created_at.strftime("%m/%Y")
+    .row
+    .far.fa-clock
+    Last updated
+    = @course.updated_at.strftime("%m/%Y")
+    .row
+    .fa.fa-globe-africa
+    = @course.language
+    .row
+    .fa.fa-signal
+    = @course.level
+    .row
+  .card-footer
     - if @course.price > 0
       = form_tag course_enrollments_path(@course) do
         %script.stripe-button{"data-amount" => "#{(@course.price * 100).to_i}",
