--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,32 +3,22 @@
     %br/
     .row
       .col-lg-4
-        = link_to 'Islam4Kids', root_path, class: "#{'active font-weight-bold' if current_page?(root_path)}"
+        = link_to 'Islam4Kids Academy', root_path, class: "#{'active font-weight-bold' if current_page?(root_path)}"
         ©
         \#{Time.now.year}
         %br/
-        = link_to t('navigation.home'), root_path, class: "#{'active font-weight-bold' if current_page?(root_path)}"
-        %br/
-        = mail_to 'inspirebyexample0@gmail.com' do
-          .fa.fa-envelope
-        = link_to "https://instagram.com/Islam4Kids", target: :_blank do
-          .fab.fa-instagram
-        .row
+        = link_to "https://Islam4kids.org", target: :_blank do
+          Islam4Kids Site
+          .fa.fa-external-link-alt
       .col-lg-4
         .row
         = link_to 'Teach on Islam4Kids', new_course_path, class: "#{'active font-weight-bold' if current_page?(new_course_path)}"
         .row
         = link_to 'About', about_path, class: "#{'active font-weight-bold' if current_page?(about_path)}"
+      .col-lg-4
         .row
         = link_to 'Privacy', privacy_path, class: "#{'active font-weight-bold' if current_page?(privacy_path)}"
         .row
         = link_to 'Terms', terms_path, class: "#{'active font-weight-bold' if current_page?(terms_path)}"
-      .col-lg-4
-        = link_to "https://Islam4kids.org", target: :_blank do
-          Islam4Kids Site
-          .fa.fa-external-link-alt
-        .row
-        = link_to "https://Islam4kids.org", target: :_blank do
-          Islam4Kids Blog
-          .fa.fa-external-link-alt
+
   %br/
