--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,18 +1,30 @@
 - content_for :title do
-  Islam4Kids 
+  Islam4Kids
   \/
   Edit roles for
   = @user.username
 
 .card.shadow
   .card-header
-    Editing roles for
-    = @user.email
-  .card-body
-    = simple_form_for @user do |f|
-      = f.collection_check_boxes :role_ids, Role.all, :id, :name
-      = f.error :roles, class: 'text-danger'
-      %hr
-      = f.button :submit, class: "btn btn-success"
-  .card-footer
-    = link_to 'Cancel', users_path, class: 'btn btn-danger'
+    %h3
+      Editing user
+      = @user.email
+    - if policy(@user).user_is_admin?
+      .card-body
+        Please choose the appropriate roles?
+        = simple_form_for @user do |f|
+
+          = f.collection_check_boxes :role_ids, Role.all, :id, :name
+          = f.error :roles, class: 'text-danger'
+          %hr
+          = f.button :submit, class: "btn btn-success"
+          = link_to 'Cancel', root_path, class: 'btn btn-danger'
+    - else
+      .card-body
+        Would you like to add the teacher role to your account?
+        = simple_form_for @user, action: 'update' do |f|
+          = f.input :role_ids, :as => :hidden, :input_html => { :role_ids => 1 }
+          = f.error :roles, class: 'text-danger'
+          %hr
+          = f.button :submit, class: "btn btn-success"
+          = link_to 'Cancel', root_path, class: 'btn btn-danger'
