--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -57,7 +57,7 @@
       /= Course.count
       /online courses
       .row
-      %small Explore a variety of fresh topics
+      %small Explore a variety of recent topics
   .card
     .card-body
       %h1
