allow adding teacher role

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -12,7 +12,7 @@
           .fa.fa-external-link-alt
       .col-lg-4
         .row
-        = link_to 'Teach on Islam4Kids', new_course_path, class: "#{'active font-weight-bold' if current_page?(new_course_path)}"
+        = link_to 'Teach on Islam4Kids', teach_path, class: "#{'active font-weight-bold' if current_page?(new_course_path)}"
         .row
         = link_to 'About', about_path, class: "#{'active font-weight-bold' if current_page?(about_path)}"
       .col-lg-4
