--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -23,7 +23,8 @@
       .card-body
         Would you like to add the teacher role to your account?
         = simple_form_for @user, action: 'update' do |f|
-          = f.input :role_ids, :as => :hidden, :input_html => { :role_ids => 1 }
+
+          = f.collection_check_boxes :role_ids, { 'Teacher ': 2, 'Student': 3 }, :last, :first
           = f.error :roles, class: 'text-danger'
           %hr
           = f.button :submit, class: "btn btn-success"
