--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,4 +1,4 @@
-%footer.purple-background.text-light
+%footer.purple-background.text-dark{:style => "background-color: #8df589;"}
   .container-fluid.text-center
     %br/
     .row
@@ -12,12 +12,12 @@
           .fa.fa-external-link-alt
       .col-lg-4
         .row
-        = link_to 'Teach on Islam4Kids', teach_path, class: "#{'active font-weight-bold' if current_page?(new_course_path)}"
+        = link_to 'Teach on Islam4Kids', teach_path, class: "#{'active font-weight-bold' if current_page?(teach_path)}"
         .row
         = link_to 'About', about_path, class: "#{'active font-weight-bold' if current_page?(about_path)}"
       .col-lg-4
         .row
-        = link_to 'Privacy', privacy_path, class: "#{'active font-weight-bold' if current_page?(privacy_path)}"
+        = link_to 'FAQ', faq_path, class: "#{'active font-weight-bold' if current_page?(faq_path)}"
         .row
         = link_to 'Terms', terms_path, class: "#{'active font-weight-bold' if current_page?(terms_path)}"
 
