--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,8 @@
-%nav.navbar.navbar-expand-lg.navbar-dark.purple-background
+%nav.navbar.navbar-expand-lg.navbar-light{:style => "background-color: #e3f2fd;"}
   %a.navbar-brand{:href => "/"}
-    = image_tag 'logo.png', size: '30x30', alt: "logo", class: "d-inline-block align-top"
+
     /.fa.fa-graduation-cap
-    Islam4Kids
+    Islam4Kids Academy
   %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
     %span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
