--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -4,17 +4,12 @@
       %h3
         About Us
     .card-body
-      %a{:href => "https://Islam4kids.org", :target => "_blank"} Islam4Kids e-learning platform
-      is authored by Alisha Taylor.
+      %a{:href => "https://Islam4kids.org", :target => "_blank"}Islam4Kids Academy
+      is dedicated to helping children learn the deen no matter where they are in the world.
+
       %p
-      You can learn to build such applications on your own in this
-      %b Bestseller Udemy Course
-      🎥
-      %a{:href => "https://www.udemy.com/course/2519558/?referralCode=4721E9D437DEE1734159"} Ruby on Rails 6: Learn 25+ gems and build a Startup MVP 2020
-      %p
-      Learn to build an e-learning platform step-by-step. 19 hours of video, 18 chapters and 200 lectures.
-      %strong 500+ students already enrolled!
-      
+      We initially had a section on our weibsite where we added the worksheets and activities that we created for our own children, but then we realized if it takes a community to raise a child, it takes an ummah to raise an ummah. We created this community site to do just that!
+
     .card-footer
       Questions?
       %a{:href => "mailto:inspirebyexample0@gmail.com?subject=Islam4Kids%20Academy%20question"} Contact us
