--- a/app/views/courses/course_wizard/language.html.haml
+++ b/app/views/courses/course_wizard/language.html.haml
@@ -1,6 +1,6 @@
 = render layout: 'courses/course_wizard/step' do
   = simple_form_for @course, url: course_course_wizard_path, method: :put do |f|
 
-    = f.input :price, :as => :hidden, :input_html => { :price => 0 }
+    = f.input :language, collection: Course.languages, include_blank: true, as: :radio_buttons
 
     = f.button :submit, "Save & Continue"
