--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -17,6 +17,9 @@
   .col-lg-2.order-0.order-lg-1.shadow
     .sticky-top
       = search_form_for @ransack_courses, as: :courses_search, url: @ransack_path do |f|
+        %p
+        %h4
+          Search Courses
         = f.label :title_or_description
         = f.search_field :title_or_short_description_cont, placeholder: 'Title', class: 'form-control form-control-sm'
         .row
@@ -32,18 +35,23 @@
         = f.select :level_cont, Course.levels, {include_blank: true}, class: "form-control  form-control-sm"
         .row
         = f.label :teacher
-        = f.search_field :user_email_cont, placeholder: 'Email', class: 'form-control form-control-sm'
+        = f.search_field :user_email_cont, placeholder: 'Name', class: 'form-control form-control-sm'
         .row
-
+        %p
+        = f.submit
+        .row
+        %p
+        %hr
+        %h4
+          Sort Courses
         = sort_link(@ransack_courses, :average_rating, "Top Rated")
         .row
         = sort_link(@ransack_courses, :enrollments_count, "Most Popular")
         .row
         = sort_link(@ransack_courses, :created_at, "Recent")
         .row
-        = f.submit
-        .row
-        = link_to 'Reset', controller: controller_name, action: action_name
+        %hr
+        = link_to 'Reset Filters', controller: controller_name, action: action_name
       %hr
       .row
       - @tags.each do |tag|
