--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -4,28 +4,22 @@
   Online Courses - Learn Anything, On Your Schedule
 
 :css
-  .parallax {
-    /* The image used */
-    background-image: url("https://cdn.pixabay.com/photo/2020/12/19/20/20/mosque-5845220_960_720.png");
-    /* Set a specific height */
-    height: auto;
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-  }
-  / parallax
+  .jumbotron{
+      background-image: url('https://cdn.pixabay.com/photo/2019/06/18/15/14/mandala-4282571_960_720.jpg');
+      background-size: cover;
+      height: auto;}
 
-.jumbotron.shadow.parallax
-  %h1.text-shadow
-    %b What do you want to learn today?
+.jumbotron.shadow.parallax.text-shadow
+  %h1
+    %b Islam4Kids Academy
+  .p-2
+  %h3
+    %b What will you learn today?
 
-  .p-4
+  .p-2
 
   - if current_user
-    .p-3
+    .p-2
     = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
       .input-group
         = f.search_field :title_cont, class: 'form-control-lg', style: 'float: left; width: 200px; ', placeholder: 'Find a course', :autocomplete => :off
@@ -34,7 +28,7 @@
             %span.fa.fa-search{"aria-hidden" => "true"}
     .p-2
   - else
-    %h3.text-shadow Join to access all the courses
+    %h3.text-shadow Join for free to save your progress and earn a certificate of completion!
     .p-2
     = link_to 'Register', new_user_registration_path, class: 'btn btn-custom-purple btn-lg'
     = link_to 'Login', new_user_session_path, class: 'btn btn-custom-purple btn-lg'
@@ -88,6 +82,7 @@
 %p
 
 %h2
+  %b
   .fa.fa-tags
   Top Categories
 - @popular_tags.each do |tag|
@@ -101,6 +96,7 @@
 - if current_user
   - if current_user.enrollments.any?
     %h2
+      %b
       .fa.fa-user-graduate
       = link_to 'Continue learning ', learning_courses_path
     .row
