--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -12,7 +12,7 @@ body { background-image: url("https://cdn.pixabay.com/photo/2017/01/05/08/58/lan
         background-repeat: no-repeat;
         background-size: cover;
      }
-
+.collection_check_boxes { margin-right: 10px; }
 .purple-background { background-color: #563d7c; }
 .table { background: white; }
 
