--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -14,11 +14,11 @@
       - if @lesson.video.attached?
         = @lesson.video.filename
         .row
-        = link_to 'Remove video and thumbnail', delete_video_course_lesson_path(@course, @lesson), method: :delete, data: { confirm: 'Are you sure?' }
+        /= link_to 'Remove video and thumbnail', delete_video_course_lesson_path(@course, @lesson), method: :delete, data: { confirm: 'Are you sure?' }
       = f.input :video
     /  = @lesson.video_thumbnail.filename
     /= f.input :video_thumbnail
 
-    /= f.input :course_id, input_html: {value: @lesson.course_id || params[:course_id]}, as: :hidden
+    = f.input :course_id, input_html: {value: @lesson.course_id || params[:course_id]}, as: :hidden
   .form-actions
     = f.button :submit
