update certificate, add user display name for certificate, allow view course while logged out

--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -14,6 +14,7 @@
   .card-footer
     .text-center
       = enrollment_button(course)
+      = view_button(course)
       .row
       = review_button(course)
       .row
