--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -7,6 +7,7 @@
       = f.error_notification
       .form-inputs
         = f.input :email, required: true, autofocus: true
+        = f.input :display_name
         - if devise_mapping.confirmable? && resource.pending_reconfirmation?
           %p
             Currently waiting confirmation for: #{resource.unconfirmed_email}
