--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,9 +6,12 @@
       = f.error_notification
       .form-inputs
         = f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" }
+        = f.input :display_name
         = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" }
         = f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" }
       .form-actions
         = f.button :submit, "Sign up"
+        %p
+        %em *Display name is not required. If none is provided, your email will be used on your certificate of completion.
   .card-footer
     = render "devise/shared/links"
