--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -14,7 +14,7 @@
     %b Islam4Kids Academy
   .p-2
   %h3
-    %b What will you learn today?
+    %b Enroll for free to earn your certificate of completion!
 
   .p-2
 
