--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -34,13 +34,13 @@
     = link_to 'Login', new_user_session_path, class: 'btn btn-custom-purple btn-lg'
     .row.mt-1
 
-  /.form-inline.my-2.my-lg-0
-  /  = form_tag(courses_path, method: :get) do
-  /    .input-group
-  /      = text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Find a course", class: 'form-control-sm'
-  /      %span.input-group-append
-  /        %button.btn.btn-primary.btn-sm{:type => "submit"}
-  /          %span.fa.fa-search{"aria-hidden" => "true"}
+  .form-inline.my-2.my-lg-0
+    = form_tag(courses_path, method: :get) do
+      .input-group
+        = text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Find a course", class: 'form-control-sm'
+        %span.input-group-append
+          %button.btn.btn-primary.btn-sm{:type => "submit"}
+            %span.fa.fa-search{"aria-hidden" => "true"}
 
 .card-group.shadow
   .card
