--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -17,8 +17,11 @@
           = f.collection_check_boxes :role_ids, Role.all, :id, :name
           = f.error :roles, class: 'text-danger'
           %hr
-          = f.input :display_name
+          = f.input :display_name, label: "Student's Certificate of Completion Display Name"
           = f.error :display_name, class: 'text-danger'
+          %hr
+          = f.input :teacher_name, label: "Teacher's Display Name"
+          = f.error :teacher_name, class: 'text-danger'
           %hr
           = f.button :submit, class: "btn btn-success"
           = link_to 'Cancel', root_path, class: 'btn btn-danger'
@@ -29,8 +32,11 @@
           = f.collection_check_boxes :role_ids, { 'Teacher ': 2, 'Student': 3 }, :last, :first
           = f.error :roles, class: 'text-danger'
           %hr
-          = f.input :display_name
+          = f.input :display_name, label: "Student's Certificate of Completion Display Name"
           = f.error :display_name, class: 'text-danger'
+          %hr
+          = f.input :teacher_name, label: "Teacher's Display Name"
+          = f.error :teacher_name, class: 'text-danger'
           %hr
           = f.button :submit, class: "btn btn-success"
           = link_to 'Cancel', root_path, class: 'btn btn-danger'
