--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -7,7 +7,9 @@
       = f.error_notification
       .form-inputs
         = f.input :email, required: true, autofocus: true
-        = f.input :display_name
+        = f.input :display_name, label: "Student Certificate Display Name"
+        - if current_user.has_role?(:teacher)
+          = f.input :teacher_name  
         - if devise_mapping.confirmable? && resource.pending_reconfirmation?
           %p
             Currently waiting confirmation for: #{resource.unconfirmed_email}
