rename certificate for new domain

--- a/app/views/enrollments/certificate.pdf.haml
+++ b/app/views/enrollments/certificate.pdf.haml
@@ -34,7 +34,7 @@
         %h3
         = image_tag wicked_pdf_asset_base64('logo_color.png'), height: "140", width: "auto"
         %p
-        www.islam4kids.org
+        www.islam4kids.academy and www.islam4kids.org
 
 
       %br
