--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -92,25 +92,31 @@
               = link_to analytics_path, class: "dropdown-item #{'active' if current_page?(analytics_path)}" do
                 .fa.fa-chart-line
                 Analytics
-      /.form-inline.my-2.my-lg-0
-      /  = form_tag(courses_path, method: :get) do
-      /    .input-group
-      /      = text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Find a course", class: 'form-control-sm'
-      /      %span.input-group-append
-      /        %button.btn.btn-primary.btn-sm{:type => "submit"}
-      /          %span.fa.fa-search{"aria-hidden" => "true"}
+      .form-inline.my-2.my-lg-0
+        = form_tag(courses_path, method: :get) do
+          .input-group
+            = text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Find a course", class: 'form-control-sm'
+            %span.input-group-append
+              %button.btn.btn-primary.btn-sm{:type => "submit"}
+                %span.fa.fa-search{"aria-hidden" => "true"}
       %ul.navbar-nav.mr-right
-        /%li.nav-item{class: "#{'active font-weight-bold' if current_page?(activity_path)}"}
-        /  = link_to activity_path, class: 'nav-link' do
-        /    .fa.fa-bell
-        /    Activity
+        - if current_user.has_role?(:admin)
+          %li.nav-item{class: "#{'active font-weight-bold' if current_page?(activity_path)}"}
+            = link_to activity_path, class: 'nav-link' do
+              .fa.fa-bell
+              Activity
         %li.nav-item.dropdown
           %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
             - if current_user.image?
               = image_tag current_user.image, size: '30x30', alt: "#{current_user.email}", class: 'rounded-circle'
             - else
               .fa.fa-user
-            %b= current_user.username
+            - if current_user.teacher_name?
+              %b= current_user.teacher_name
+            - elsif current_user.display_name?
+              %b= current_user.display_name
+            - else
+              %b= current_user.username
           .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "navbarDropdown"}
             = link_to user_path(current_user), class: "dropdown-item #{'active' if current_page?(user_path(current_user))}" do
               .fa.fa-user
