--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,7 +6,7 @@
       = f.error_notification
       .form-inputs
         = f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" }
-        = f.input :display_name
+        = f.input :display_name, label: "Student Certificate Display Name"
         = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" }
         = f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" }
       .form-actions
