--- a/app/views/lessons/_lesson_preview.html.haml
+++ b/app/views/lessons/_lesson_preview.html.haml
@@ -1,12 +1,17 @@
-.fa.fa-lock
-%b
-  #{lesson.row_order_rank + 1}.
-= lesson.title
+- if current_user
+  - if current_user.viewed?(lesson)
+    .text-success.fa.fa-check-square
+  - else
+    .text-danger.fa.fa-check-square
+- else
+  .text-warning.fa.fa-question-circle
+= link_to course_lesson_path(@course, lesson) do
+  %b
+    #{lesson.row_order_rank + 1}.
+  = lesson.title
 .row
 - unless lesson.comments_count.zero?
   - if current_user
     - if current_user.has_role?(:teacher || :admin)
       .fa.fa-comment
       = lesson.comments_count
-- else
-  %p
