--- a/app/views/lessons/_lesson_student.html.haml
+++ b/app/views/lessons/_lesson_student.html.haml
@@ -1,7 +1,10 @@
-- if current_user.viewed?(lesson)
-  .text-success.fa.fa-check-square
+- if current_user
+  - if current_user.viewed?(lesson)
+    .text-success.fa.fa-check-square
+  - else
+    .text-danger.fa.fa-check-square
 - else
-  .text-danger.fa.fa-check-square
+  .text-warning.fa.fa-question-circle
 = link_to course_lesson_path(@course, lesson) do
   %b
     #{lesson.row_order_rank + 1}.
