precompile more assets for heroku pdf

--- a/app/views/static_pages/FAQ.html.haml
+++ b/app/views/static_pages/FAQ.html.haml
@@ -78,7 +78,7 @@
                   %ul
                     %li
                       Simply go to 
-                      %a{:href => "https://atayl16-course-app.herokuapp.com/teach"} https://atayl16-course-app.herokuapp.com/teach
+                      %a{:href => "https://www.islam4kids.academy/teach"} https://www.islam4kids.academy/teach
                       and add the Teacher's role to your profile.
                 %li
                   Do I have to write full courses like a school to submit a course?
