--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -35,7 +35,7 @@
         = f.select :level_cont, Course.levels, {include_blank: true}, class: "form-control  form-control-sm"
         .row
         = f.label :teacher
-        = f.search_field :user_email_cont, placeholder: 'Name', class: 'form-control form-control-sm'
+        = f.search_field :user_teacher_name_or_user_display_name_or_user_email_or_user_name_cont, placeholder: 'Name', class: 'form-control form-control-sm'
         .row
         %p
         = f.submit
