--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -51,6 +51,9 @@
             = content_tag "div", id: "chapter-#{chapter.id}", data: { id: chapter.id, model_name: chapter.class.name.underscore, update_url: course_chapter_sort_path(@course, chapter)} do
               .list-group-item.list-group-item-secondary
                 = render 'chapters/chapter_teacher', chapter: chapter
+                = link_to new_course_chapter_lesson_path(@course, chapter, @lesson), class: 'btn btn-sm btn-primary' do
+                  .fa.fa-plus
+                  New Lesson
                 .list-group.lesson-sortable{:style => "cursor: grab; min-height: 10px;"}
                   - chapter.lessons.rank(:row_order).each do |lesson|
                     = content_tag "div", id: "lesson-#{lesson.id}", data: { model_name: lesson.class.name.underscore, update_url: course_lesson_sort_path(@course, lesson)} do
@@ -87,7 +90,7 @@
     %br
     - if current_user
       %h4
-        .far.fa-comment
+        .far.fa-star
         = pluralize(@reviews.count, 'review')
 
       - @reviews.each do |enrollment|
