--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -13,9 +13,9 @@
         .text-success.fa.fa-check-square
         = link_to course_lesson_path(@course, @lesson) do
           %b
-            #{@lesson.chapter.row_order_rank + 1}.
-            #{@lesson.row_order_rank + 1}.
-          = @lesson.title
+            Chapter #{@lesson.chapter.row_order_rank + 1}.
+            Lesson #{@lesson.row_order_rank + 1}:
+            = @lesson.title
       .card-body
         - if @lesson.video.attached?
           /%video(controls="true" poster="#{url_for @lesson.video}" width="100%" preload="metadata" controlslist="nodownload")
@@ -29,28 +29,37 @@
 
         = @lesson.content
 
+
       - if policy(@lesson).edit?
         .card-footer
           = link_to edit_course_lesson_path(@course, @lesson), class: 'btn btn-sm btn-warning mr-1' do
             .fa.fa-edit
           = link_to [@course, @lesson], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' do
             .fa.fa-trash
-          - unless @lesson.prev.nil?
-            .float-left
-              = link_to course_lesson_path(@course, @lesson.prev), class: 'btn btn-sm btn-info' do
-                .fa.fa-arrow-left
-                Previous
-          - unless @lesson.next.nil?
-            .float-right
-              = link_to course_lesson_path(@course, @lesson.next), class: 'btn btn-sm btn-info' do
-                .fa.fa-arrow-right
-                Next
+      .card-footer
+        - unless @lesson.prev.nil?
+          .float-left
+            = link_to course_lesson_path(@course, @lesson.prev), class: 'btn btn-sm btn-info' do
+              .fa.fa-arrow-left
+              Previous Lesson
+        - unless @lesson.next.nil?
+          .float-right
+            = link_to course_lesson_path(@course, @lesson.next), class: 'btn btn-sm btn-info' do
+              .fa.fa-arrow-right
+              Next Lesson
+      .card-footer
+        = link_to course_path(@course), class: 'btn btn-sm btn-secondary' do
+          .fa.fa-graduation-cap
+          Back to Course -
+          = @course.title
 
-          %p
+    %p
+
     - if current_user
       - if policy(@course).student_or_admin?
         .card.shadow
           .card-header
+            %p
             .fa.fa-comment
             Do you have a comment, suggestion or feedback for the teacher?
           .card-body
