update email address

--- a/app/views/static_pages/FAQ.html.haml
+++ b/app/views/static_pages/FAQ.html.haml
@@ -124,7 +124,7 @@
                   How can I help?
                   %ul
                     %li
-                      If you would like to help, send an email to inspirebyexample0@gmail.com and let us know what you are interested in.
+                      If you would like to help, send an email to support@islam4kids.academy and let us know what you are interested in.
                 %li
                   Is this website secure?
                   %ul
