--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -12,5 +12,5 @@
 
     .card-footer
       Questions?
-      %a{:href => "mailto:inspirebyexample0@gmail.com?subject=Islam4Kids%20Academy%20question"} Contact us
+      %a{:href => "mailto:support@islam4kids.academy?subject=Islam4Kids%20Academy%20question"} Contact us
 %br
