--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,9 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-    %meta{:content => "online education, course platform, video tutorials, udemy clone", :name => "keywords"}/
-    %meta{:content => "Online Learning and Skill sharing platform", :name => "description"}/
-    %meta{:content => "Yaroslav Shmarov", :name => "author"}/
+    %meta{:content => "free course, teach online, islam kids, muslim children", :name => "keywords"}/
+    %meta{:content => "Free online learning platform for Muslim children", :name => "description"}/
+    %meta{:content => "Alisha Taylor", :name => "author"}/
     = favicon_link_tag 'logo.png'
     %title
       = content_for?(:title) ? yield(:title) : "Islam4Kids"
@@ -15,6 +15,7 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    
 
     - if Rails.env.production?
       = render 'layouts/google_analytics'
